--- a/Alumni-Website-main/package.json
+++ b/Alumni-Website-main/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
+    "autoprefixer": "^10.4.17",
+    "firebase": "^10.8.1",
     "moment": "^2.29.1",
+    "postcss": "^8.4.35",
     "react": "^17.0.1",
     "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^1.4.3",
@@ -18,6 +21,8 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
