--- a/Alumni-Website-main/.env
+++ b/Alumni-Website-main/.env
@@ -1,2 +1,5 @@
 REACT_APP_AUTH0_DOMAIN=dev-9mhb8ayz.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=N9O9MaAeLwEYtgx4MIRJYuI16D9TAImB
+REACT_APP_FIREBASECONFIG = AIzaSyDmiZTUb9Jf2QK8Clt0EXiA1OlSuAQCCX4
+REACT_APP_RECAPTCHA_SITE = 6Lf4uYcpAAAAALXmKDtmowBGXXKcT5JOjgTbwsiS
+REACT_APP_RECAPTCHA_SERVER = 6LepuIcpAAAAAJFlUzJwgp57sUggVW_cgbrx9hzU
