--- a/Alumni-Website-main/package.json
+++ b/Alumni-Website-main/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.3",
     "autoprefixer": "^10.4.17",
+    "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
     "moment": "^2.29.1",
     "postcss": "^8.4.35",
@@ -18,6 +19,8 @@
     "react-big-calendar": "^0.33.2",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
@@ -37,7 +40,7 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ] 
+    ]
   },
   "browserslist": {
     "production": [
