changed some things abt the ways the topbar/menu system displayed

--- a/Alumni-Website-main/package.json
+++ b/Alumni-Website-main/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.17",
     "dotenv": "^16.4.5",
     "firebase": "^10.8.1",
+    "mini-create-react-context": "^0.4.1",
     "moment": "^2.29.1",
     "postcss": "^8.4.35",
     "react": "^17.0.1",
@@ -22,7 +23,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.10.1",
     "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "tailwindcss": "^3.4.1",
