--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alumnifr",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ayaamghi.github.io/alum/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
@@ -18,15 +19,16 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4",
-    "react-router-dom": "^6.22.3",
-    "tailwindcss": "^3.4.1"
-
+    "tailwindcss": "^3.4.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -51,5 +53,6 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
